--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@ pre {
     white-space: pre-wrap;
     position: relative;
     margin: 10px 0;
+    overflow-wrap: anywhere;
+    max-width: 100%;
 }
 
 code {
     color: #f8f8f2;
+    word-break: normal;
 }
 
 /* Copy button */
